<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:background="@mipmap/main_image"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorHalfTransparentGray"
        android:padding="40dp">

        <!-- 标题 -->
        <LinearLayout
            android:id="@+id/layout_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_vertical_super"
            android:layout_marginBottom="@dimen/spacing_vertical_large"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/iv_login"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:contentDescription="@string/hint"
                android:src="@mipmap/icon_login"/>

            <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_horizontal_large"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_super"
                android:textStyle="bold"/>
        </LinearLayout>

        <!-- 账号 -->
        <LinearLayout
            android:id="@+id/layout_login_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_login_title"
            android:layout_marginTop="@dimen/spacing_vertical_large"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/spacing_horizontal_medium">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/icon_account"
                android:contentDescription="@string/hint"/>

            <EditText
                android:id="@+id/edt_login_account"
                android:background="@color/colorTransparent"
                android:layout_marginStart="@dimen/spacing_horizontal_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_horizontal_small"
                android:inputType="text"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:hint="@string/login_hint_account"
                android:textStyle="bold"
                android:textCursorDrawable="@drawable/cursor_drawable"
                tools:ignore="LabelFor"/>
        </LinearLayout>

        <!-- 分割线1 -->
        <TextView
            android:id="@+id/tv_line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout_login_account"
            android:background="@color/colorWhite"/>


        <!-- 密码 -->
        <LinearLayout
            android:id="@+id/layout_login_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_login_account"
            android:layout_marginTop="@dimen/spacing_vertical_medium"
            android:padding="@dimen/spacing_horizontal_medium"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/icon_psw"
                android:contentDescription="@string/hint"/>

            <EditText
                android:id="@+id/edt_login_psw"
                android:background="@color/colorTransparent"
                android:layout_marginStart="@dimen/spacing_horizontal_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_horizontal_small"
                android:inputType="textPassword"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:hint="@string/login_hint_psw"
                android:textStyle="bold"
                android:textCursorDrawable="@drawable/cursor_drawable"
                tools:ignore="LabelFor"/>

        </LinearLayout>

        <!-- 分割线2 -->
        <TextView
            android:id="@+id/tv_line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout_login_psw"
            android:background="@color/colorWhite"/>

        <LinearLayout
            android:id="@+id/layout_login_btn"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/layout_login_psw"
            android:layout_marginTop="@dimen/spacing_vertical_large"
            android:background="@drawable/common_solid_btn_bg_selector"
            android:orientation="horizontal"
            android:gravity="center"
            tools:ignore="DuplicateIds">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_big"
                android:text="@string/login"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_forgot_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_login_btn"
            android:layout_marginTop="@dimen/spacing_vertical_medium"
            android:text="@string/forget_psw"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/common_click_color_selector"/>

        <TextView
            android:id="@+id/tv_user_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_login_btn"
            android:layout_marginTop="@dimen/spacing_vertical_medium"
            android:layout_alignParentEnd="true"
            android:text="@string/user_registration"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/common_click_color_selector"/>

            <LinearLayout
                android:id="@+id/layout_login_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/colorWhite"
                    android:text="@string/login_bottom_text"/>
                <TextView
                    android:id="@+id/tv_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:textColor="@color/common_click_color_selector"
                    android:text="@string/terms_of_service"/>
            </LinearLayout>

    </RelativeLayout>
</LinearLayout>
